# behave-lint

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  out.json  pyproject.toml  test_lsp.feature
.behave-lint-cache/: lint_cache.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml  nightly.yml  release.yml  security.yml
behave_lint/: __init__.py  __main__.py  exceptions.py
behave_lint/autofix/: __init__.py  coordinator.py  models.py
behave_lint/cache/: __init__.py  manager.py
behave_lint/cli/: __init__.py  coordinator.py  parser.py  watch.py
behave_lint/config/: __init__.py
behave_lint/configuration/: defaults.py  groups.py  loader.py  profiles.py  schema.py
behave_lint/diagnostics/: filters.py  sorting.py
behave_lint/engine/: lint_engine.py
behave_lint/errors/: __init__.py
behave_lint/infrastructure/: project_loader.py
behave_lint/lsp/: __init__.py  server.py
behave_lint/metadata/: __init__.py
behave_lint/models/: config.py  enums.py  lint_result.py  rule_metadata.py
behave_lint/plugins/: __init__.py
behave_lint/reporters/: manager.py
behave_lint/rules/: registry.py  validation.py
behave_lint/rules/builtin/: __init__.py  accessibility.py  complexity.py  correctness.py  i18n.py  pedantic.py  security.py  step_definitions.py  style.py
behave_lint/statistics/: __init__.py
benchmarks/: README.md  REPORT.md
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ROADMAP.md  SECURITY.md  SUPPORTED_VERSIONS.md  index.md  release-checklist.md
docs/api/: index.md
docs/getting-started/: installation.md  quick-start.md
docs/guides/: ci-cd.md  custom-rules.md  index.md  plugin-development.md  pre-commit.md
docs/rules/: accessibility.md  complexity.md  consistency.md  correctness.md  i18n.md  index.md  pedantic.md  security.md  step-definitions.md  style.md
docs/usage/: auto-fix.md  cache.md  cli-reference.md  configuration.md  groups.md  lsp.md  output-formats.md  profiles.md
examples/: README.md
examples/auto-fix/: README.md
examples/auto-fix/features/after/: demo.feature
examples/auto-fix/features/before/: demo.feature
examples/basic-usage/: README.md  pyproject.toml
examples/basic-usage/features/: cart.feature  login.feature
examples/ci-cd/: README.md  pyproject.toml
examples/ci-cd/.github/workflows/: lint.yml
examples/ci-cd/features/: checkout.feature  registration.feature
examples/configs/: README.md
examples/custom-rules/: README.md  pyproject.toml
examples/custom-rules/features/: demo.feature  pyproject.toml
examples/custom-rules/src/behave_lint_ex001/: __init__.py
examples/enterprise/: README.md
examples/minimal/: README.md
examples/plugin_config/: README.md
examples/plugin_reporter/: README.md
examples/plugin_rule/: README.md
ref/: API.md  ARCHITECTURE.md  COMPONENT_DESIGN.md  CONFIGURATION_SYSTEM.md  DEVELOPMENT_GUIDELINES.md  DIAGNOSTIC_ENGINE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STRATEGY.md  REPOSITORY_DESIGN.md  RULE_ENGINE.md  RULE_TAXONOMY.md  SPECIFICATION.md  VISION.md
scripts/: generate_fixtures.py
src/behave_lint/: constants.py  types.py  version.py
src/behave_lint/cli/: __init__.py  exit_codes.py  parser.py  router.py
src/behave_lint/configuration/: __init__.py  defaults.py  discovery.py
src/behave_lint/diagnostics/: __init__.py  collector.py  dedup.py  validation.py
src/behave_lint/engine/: __init__.py
src/behave_lint/infrastructure/: __init__.py  file_discovery.py
src/behave_lint/models/: __init__.py  diagnostic.py
src/behave_lint/plugins/: manager.py  plugin_info.py
src/behave_lint/reporters/: __init__.py  base.py  console.py  github.py  json_reporter.py  markdown.py  sarif.py
src/behave_lint/rules/: __init__.py  base.py  context.py  diagnostic_factory.py  executor.py  scope.py
src/behave_lint/rules/builtin/: __init__.py  complexity.py  consistency.py  correctness.py  step_definitions.py
src/behave_lint/services/: __init__.py
templates/cookiecutter-plugin/: cookiecutter.json
templates/cookiecutter-plugin/{{cookiecutter.project_name}}/: .gitignore  README.md  pyproject.toml
templates/cookiecutter-plugin/{{cookiecutter.project_name}}/tests/: test_rule.py
templates/cookiecutter-plugin/{{cookiecutter.project_name}}/{{cookiecutter.plugin_name}}/: __init__.py  rules.py
tests/: conftest.py
tests/architecture/: __init__.py  test_package_structure.py
tests/golden/: __init__.py
tests/integration/: __init__.py  test_end_to_end.py
tests/performance/: __init__.py  test_benchmarks.py
tests/regression/: __init__.py
tests/snapshot/: __init__.py
tests/unit/: __init__.py
tests/unit/behave_lint/: __init__.py  test_exceptions.py  test_package.py
tests/unit/behave_lint/autofix/: test_coordinator.py  test_integration.py  test_models.py  test_pedantic_fixes.py  test_style_fixes.py
tests/unit/behave_lint/cache/: test_cache.py
tests/unit/behave_lint/cli/: __init__.py  test_cli.py  test_coordinator.py  test_exit_codes.py  test_parser.py  test_router.py  test_watch.py
tests/unit/behave_lint/configuration/: __init__.py  test_defaults.py  test_discovery.py  test_groups.py  test_loader.py  test_profile_functional.py  test_profiles.py  test_schema.py
tests/unit/behave_lint/diagnostics/: __init__.py  test_collector.py  test_dedup.py  test_filters.py  test_sorting.py  test_validation.py
tests/unit/behave_lint/engine/: __init__.py  test_lint_engine.py
tests/unit/behave_lint/infrastructure/: __init__.py  test_file_discovery.py  test_project_loader.py
tests/unit/behave_lint/lsp/: test_server.py
tests/unit/behave_lint/models/: __init__.py  test_config.py  test_diagnostic.py  test_enums.py  test_lint_result.py  test_rule_metadata.py
tests/unit/behave_lint/plugins/: __init__.py  test_manager.py  test_plugin_info.py
tests/unit/behave_lint/reporters/: __init__.py  test_base.py  test_console.py  test_github.py  test_json.py  test_manager.py  test_markdown.py  (+1 more)
(+17 files in other folders)
