[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "behave-lint"
version = "1.2.1"
description = "A fast, opinionated, extensible linter for Gherkin .feature files and Behave test suites."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Mathias Paulenko" },
    { name = "behave-lint contributors" },
]
keywords = [
    "behave",
    "bdd",
    "gherkin",
    "lint",
    "linter",
    "static-analysis",
    "code-quality",
    "feature-files",
    "cucumber",
    "sarif",
    "auto-fix",
    "ci-cd",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "behave-model>=1.0,<2",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "pymdown-extensions>=10.7",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
]
release = [
    "hatchling>=1.21",
]

[project.urls]
Homepage = "https://github.com/MathiasPaulenko/behave-lint"
Documentation = "https://mathiaspaulenko.github.io/behave-lint/"
Repository = "https://github.com/MathiasPaulenko/behave-lint"
Issues = "https://github.com/MathiasPaulenko/behave-lint/issues"
Changelog = "https://github.com/MathiasPaulenko/behave-lint/blob/main/docs/CHANGELOG.md"

[project.scripts]
behave-lint = "behave_lint.cli:run"

[project.entry-points."behave_lint.rules"]
# Built-in rules registered here during M7

[project.entry-points."behave_lint.reporters"]
# Built-in reporters registered here during M8

[tool.hatch.build.targets.wheel]
packages = ["behave_lint"]

[tool.hatch.build.targets.sdist]
include = [
    "behave_lint/",
    "tests/",
    "docs/",
    "ref/",
    "examples/",
    "scripts/",
    "LICENSE",
    "README.md",
]

# ---------------------------------------------------------------------------
# Ruff — formatter + linter
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["behave_lint", "tests"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["behave_lint"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# Mypy — static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
mypy_path = "behave_lint"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
files = ["behave_lint"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
strict = false

[[tool.mypy.overrides]]
module = "behave_model.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "typer.*"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest — test runner
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "unit: unit tests (single component in isolation)",
    "integration: integration tests (multi-component pipeline)",
    "golden: golden output stability tests",
    "snapshot: diagnostic snapshot stability tests",
    "performance: performance benchmark tests",
    "regression: bug regression tests",
    "architecture: architecture rule tests (import direction, layer separation)",
    "slow: slow tests (excluded from default CI runs)",
]
filterwarnings = [
    "error",
]

# ---------------------------------------------------------------------------
# Coverage — pytest-cov
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["behave_lint"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.coverage.paths]
source = ["behave_lint/", "*/site-packages/"]

# ---------------------------------------------------------------------------
# uv — package manager
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "pymdown-extensions>=10.7",
    "pip-audit>=2.7",
]
