[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "behave-lint-ex001"
version = "0.1.0"
description = "Example custom rule for behave-lint"
requires-python = ">=3.11"
dependencies = ["behave-lint"]

[project.entry-points."behave_lint.rules"]
no-given-after-then = "behave_lint_ex001:NoGivenAfterThenRule"

[tool.hatch.build.targets.wheel]
packages = ["src/behave_lint_ex001"]
